[package]
name = "secp256k1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.7.0"
sha3 = "0.9.1"
hex-literal = "0.3.3"
serde = "1.0.130"
bincode = "1.3.3"
solana-sdk = "1.8.2"
solana-program = "1.7.11"